# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# GPLv3
licenses(["restricted"])

exports_files(["LICENSE"])

# Note that this filegroup must contain an executable file called 'swig',
# which will be run by Blaze. Also note that data dependencies are ignored.
filegroup(
    name = "swig_stable",
    srcs = [
        ":swig",
        ":swig_templates",
    ],
    output_licenses = ["unencumbered"],
    visibility = [
        "//visibility:public",
    ],
)

# find swig/v4_0_0/Lib \( -name '*.swg' -o -name '*.i' \)  -print  | awk '{gsub(/third_party\/swig\/v4_0_0\//, "", $0); printf("\"%s\",\n", $0) }'
filegroup(
    name = "swig_templates",
    srcs = [
        "Lib/allegrocl/allegrocl.swg",
        "Lib/allegrocl/inout_typemaps.i",
        "Lib/allegrocl/longlongs.i",
        "Lib/allegrocl/std_list.i",
        "Lib/allegrocl/std_string.i",
        "Lib/allegrocl/typemaps.i",
        "Lib/allkw.swg",
        "Lib/attribute.i",
        "Lib/carrays.i",
        "Lib/cdata.i",
        "Lib/cffi/cffi.swg",
        "Lib/chicken/chicken.swg",
        "Lib/chicken/chickenkw.swg",
        "Lib/chicken/chickenrun.swg",
        "Lib/chicken/std_string.i",
        "Lib/chicken/typemaps.i",
        "Lib/clisp/clisp.swg",
        "Lib/cmalloc.i",
        "Lib/constraints.i",
        "Lib/cpointer.i",
        "Lib/csharp/arrays_csharp.i",
        "Lib/csharp/boost_intrusive_ptr.i",
        "Lib/csharp/boost_shared_ptr.i",
        "Lib/csharp/complex.i",
        "Lib/csharp/csharp.swg",
        "Lib/csharp/csharphead.swg",
        "Lib/csharp/csharpkw.swg",
        "Lib/csharp/director.swg",
        "Lib/csharp/enums.swg",
        "Lib/csharp/enumsimple.swg",
        "Lib/csharp/enumtypesafe.swg",
        "Lib/csharp/std_array.i",
        "Lib/csharp/std_auto_ptr.i",
        "Lib/csharp/std_common.i",
        "Lib/csharp/std_complex.i",
        "Lib/csharp/std_deque.i",
        "Lib/csharp/std_except.i",
        "Lib/csharp/std_list.i",
        "Lib/csharp/std_map.i",
        "Lib/csharp/std_pair.i",
        "Lib/csharp/std_set.i",
        "Lib/csharp/std_shared_ptr.i",
        "Lib/csharp/std_string.i",
        "Lib/csharp/std_vector.i",
        "Lib/csharp/std_wstring.i",
        "Lib/csharp/stl.i",
        "Lib/csharp/swiginterface.i",
        "Lib/csharp/swigtype_inout.i",
        "Lib/csharp/typemaps.i",
        "Lib/csharp/wchar.i",
        "Lib/cstring.i",
        "Lib/cwstring.i",
        "Lib/d/boost_shared_ptr.i",
        "Lib/d/carrays.i",
        "Lib/d/cpointer.i",
        "Lib/d/d.swg",
        "Lib/d/dclassgen.swg",
        "Lib/d/ddirectives.swg",
        "Lib/d/denums.swg",
        "Lib/d/dexception.swg",
        "Lib/d/dhead.swg",
        "Lib/d/director.swg",
        "Lib/d/dkw.swg",
        "Lib/d/dmemberfunctionpointers.swg",
        "Lib/d/doperators.swg",
        "Lib/d/dprimitives.swg",
        "Lib/d/dstrings.swg",
        "Lib/d/dswigtype.swg",
        "Lib/d/dvoid.swg",
        "Lib/d/std_common.i",
        "Lib/d/std_deque.i",
        "Lib/d/std_except.i",
        "Lib/d/std_map.i",
        "Lib/d/std_pair.i",
        "Lib/d/std_shared_ptr.i",
        "Lib/d/std_string.i",
        "Lib/d/std_vector.i",
        "Lib/d/stl.i",
        "Lib/d/typemaps.i",
        "Lib/d/wrapperloader.swg",
        "Lib/director_common.swg",
        "Lib/exception.i",
        "Lib/go/cdata.i",
        "Lib/go/director.swg",
        "Lib/go/exception.i",
        "Lib/go/go.swg",
        "Lib/go/gokw.swg",
        "Lib/go/goruntime.swg",
        "Lib/go/gostring.swg",
        "Lib/go/std_common.i",
        "Lib/go/std_deque.i",
        "Lib/go/std_except.i",
        "Lib/go/std_list.i",
        "Lib/go/std_map.i",
        "Lib/go/std_pair.i",
        "Lib/go/std_string.i",
        "Lib/go/std_vector.i",
        "Lib/go/stl.i",
        "Lib/go/typemaps.i",
        "Lib/guile/cplusplus.i",
        "Lib/guile/guile.i",
        "Lib/guile/guile_scm.swg",
        "Lib/guile/guile_scm_run.swg",
        "Lib/guile/guilemain.i",
        "Lib/guile/interpreter.i",
        "Lib/guile/list-vector.i",
        "Lib/guile/pointer-in-out.i",
        "Lib/guile/ports.i",
        "Lib/guile/std_common.i",
        "Lib/guile/std_deque.i",
        "Lib/guile/std_except.i",
        "Lib/guile/std_map.i",
        "Lib/guile/std_pair.i",
        "Lib/guile/std_string.i",
        "Lib/guile/std_vector.i",
        "Lib/guile/stl.i",
        "Lib/guile/swigrun.i",
        "Lib/guile/typemaps.i",
        "Lib/intrusive_ptr.i",
        "Lib/inttypes.i",
        "Lib/java/arrays_java.i",
        "Lib/java/boost_intrusive_ptr.i",
        "Lib/java/boost_shared_ptr.i",
        "Lib/java/director.swg",
        "Lib/java/enums.swg",
        "Lib/java/enumsimple.swg",
        "Lib/java/enumtypesafe.swg",
        "Lib/java/enumtypeunsafe.swg",
        "Lib/java/java.swg",
        "Lib/java/javahead.swg",
        "Lib/java/javakw.swg",
        "Lib/java/std_array.i",
        "Lib/java/std_auto_ptr.i",
        "Lib/java/std_common.i",
        "Lib/java/std_deque.i",
        "Lib/java/std_except.i",
        "Lib/java/std_list.i",
        "Lib/java/std_map.i",
        "Lib/java/std_pair.i",
        "Lib/java/std_set.i",
        "Lib/java/std_shared_ptr.i",
        "Lib/java/std_string.i",
        "Lib/java/std_unordered_map.i",
        "Lib/java/std_unordered_set.i",
        "Lib/java/std_vector.i",
        "Lib/java/std_wstring.i",
        "Lib/java/stl.i",
        "Lib/java/swiginterface.i",
        "Lib/java/typemaps.i",
        "Lib/java/various.i",
        "Lib/javascript/jsc/arrays_javascript.i",
        "Lib/javascript/jsc/ccomplex.i",
        "Lib/javascript/jsc/cdata.i",
        "Lib/javascript/jsc/complex.i",
        "Lib/javascript/jsc/exception.i",
        "Lib/javascript/jsc/javascript.swg",
        "Lib/javascript/jsc/javascriptcode.swg",
        "Lib/javascript/jsc/javascriptcomplex.swg",
        "Lib/javascript/jsc/javascriptfragments.swg",
        "Lib/javascript/jsc/javascripthelpers.swg",
        "Lib/javascript/jsc/javascriptinit.swg",
        "Lib/javascript/jsc/javascriptkw.swg",
        "Lib/javascript/jsc/javascriptprimtypes.swg",
        "Lib/javascript/jsc/javascriptrun.swg",
        "Lib/javascript/jsc/javascriptruntime.swg",
        "Lib/javascript/jsc/javascriptstrings.swg",
        "Lib/javascript/jsc/javascripttypemaps.swg",
        "Lib/javascript/jsc/std_common.i",
        "Lib/javascript/jsc/std_complex.i",
        "Lib/javascript/jsc/std_deque.i",
        "Lib/javascript/jsc/std_except.i",
        "Lib/javascript/jsc/std_map.i",
        "Lib/javascript/jsc/std_pair.i",
        "Lib/javascript/jsc/std_string.i",
        "Lib/javascript/jsc/std_vector.i",
        "Lib/javascript/jsc/stl.i",
        "Lib/javascript/jsc/typemaps.i",
        "Lib/javascript/v8/arrays_javascript.i",
        "Lib/javascript/v8/ccomplex.i",
        "Lib/javascript/v8/cdata.i",
        "Lib/javascript/v8/complex.i",
        "Lib/javascript/v8/exception.i",
        "Lib/javascript/v8/javascript.swg",
        "Lib/javascript/v8/javascriptcode.swg",
        "Lib/javascript/v8/javascriptcomplex.swg",
        "Lib/javascript/v8/javascriptfragments.swg",
        "Lib/javascript/v8/javascripthelpers.swg",
        "Lib/javascript/v8/javascriptinit.swg",
        "Lib/javascript/v8/javascriptkw.swg",
        "Lib/javascript/v8/javascriptprimtypes.swg",
        "Lib/javascript/v8/javascriptrun.swg",
        "Lib/javascript/v8/javascriptruntime.swg",
        "Lib/javascript/v8/javascriptstrings.swg",
        "Lib/javascript/v8/javascripttypemaps.swg",
        "Lib/javascript/v8/std_common.i",
        "Lib/javascript/v8/std_complex.i",
        "Lib/javascript/v8/std_deque.i",
        "Lib/javascript/v8/std_except.i",
        "Lib/javascript/v8/std_map.i",
        "Lib/javascript/v8/std_pair.i",
        "Lib/javascript/v8/std_string.i",
        "Lib/javascript/v8/std_vector.i",
        "Lib/javascript/v8/stl.i",
        "Lib/javascript/v8/typemaps.i",
        "Lib/lua/_std_common.i",
        "Lib/lua/carrays.i",
        "Lib/lua/factory.i",
        "Lib/lua/lua.swg",
        "Lib/lua/lua_fnptr.i",
        "Lib/lua/luakw.swg",
        "Lib/lua/luarun.swg",
        "Lib/lua/luaruntime.swg",
        "Lib/lua/luatypemaps.swg",
        "Lib/lua/std_common.i",
        "Lib/lua/std_deque.i",
        "Lib/lua/std_except.i",
        "Lib/lua/std_map.i",
        "Lib/lua/std_pair.i",
        "Lib/lua/std_string.i",
        "Lib/lua/std_vector.i",
        "Lib/lua/stl.i",
        "Lib/lua/typemaps.i",
        "Lib/lua/wchar.i",
        "Lib/math.i",
        "Lib/modula3/modula3.swg",
        "Lib/modula3/modula3head.swg",
        "Lib/modula3/typemaps.i",
        "Lib/mzscheme/mzrun.swg",
        "Lib/mzscheme/mzscheme.swg",
        "Lib/mzscheme/std_common.i",
        "Lib/mzscheme/std_deque.i",
        "Lib/mzscheme/std_map.i",
        "Lib/mzscheme/std_pair.i",
        "Lib/mzscheme/std_string.i",
        "Lib/mzscheme/std_vector.i",
        "Lib/mzscheme/stl.i",
        "Lib/mzscheme/typemaps.i",
        "Lib/ocaml/carray.i",
        "Lib/ocaml/class.swg",
        "Lib/ocaml/cstring.i",
        "Lib/ocaml/director.swg",
        "Lib/ocaml/ocaml.i",
        "Lib/ocaml/ocaml.swg",
        "Lib/ocaml/ocamldec.swg",
        "Lib/ocaml/ocamlkw.swg",
        "Lib/ocaml/preamble.swg",
        "Lib/ocaml/std_common.i",
        "Lib/ocaml/std_complex.i",
        "Lib/ocaml/std_deque.i",
        "Lib/ocaml/std_except.i",
        "Lib/ocaml/std_list.i",
        "Lib/ocaml/std_map.i",
        "Lib/ocaml/std_pair.i",
        "Lib/ocaml/std_string.i",
        "Lib/ocaml/std_vector.i",
        "Lib/ocaml/stl.i",
        "Lib/ocaml/typecheck.i",
        "Lib/ocaml/typemaps.i",
        "Lib/ocaml/typeregister.swg",
        "Lib/octave/attribute.i",
        "Lib/octave/boost_shared_ptr.i",
        "Lib/octave/carrays.i",
        "Lib/octave/cdata.i",
        "Lib/octave/cmalloc.i",
        "Lib/octave/director.swg",
        "Lib/octave/exception.i",
        "Lib/octave/factory.i",
        "Lib/octave/implicit.i",
        "Lib/octave/octave.swg",
        "Lib/octave/octcomplex.swg",
        "Lib/octave/octcontainer.swg",
        "Lib/octave/octfragments.swg",
        "Lib/octave/octiterators.swg",
        "Lib/octave/octopers.swg",
        "Lib/octave/octprimtypes.swg",
        "Lib/octave/octrun.swg",
        "Lib/octave/octruntime.swg",
        "Lib/octave/octstdcommon.swg",
        "Lib/octave/octtypemaps.swg",
        "Lib/octave/octuserdir.swg",
        "Lib/octave/std_alloc.i",
        "Lib/octave/std_basic_string.i",
        "Lib/octave/std_carray.i",
        "Lib/octave/std_char_traits.i",
        "Lib/octave/std_common.i",
        "Lib/octave/std_complex.i",
        "Lib/octave/std_container.i",
        "Lib/octave/std_deque.i",
        "Lib/octave/std_except.i",
        "Lib/octave/std_list.i",
        "Lib/octave/std_map.i",
        "Lib/octave/std_pair.i",
        "Lib/octave/std_shared_ptr.i",
        "Lib/octave/std_string.i",
        "Lib/octave/std_vector.i",
        "Lib/octave/std_wstring.i",
        "Lib/octave/stl.i",
        "Lib/octave/typemaps.i",
        "Lib/perl5/attribute.i",
        "Lib/perl5/carrays.i",
        "Lib/perl5/cdata.i",
        "Lib/perl5/cmalloc.i",
        "Lib/perl5/cpointer.i",
        "Lib/perl5/cstring.i",
        "Lib/perl5/director.swg",
        "Lib/perl5/exception.i",
        "Lib/perl5/factory.i",
        "Lib/perl5/perl5.swg",
        "Lib/perl5/perlerrors.swg",
        "Lib/perl5/perlfragments.swg",
        "Lib/perl5/perlhead.swg",
        "Lib/perl5/perlinit.swg",
        "Lib/perl5/perlkw.swg",
        "Lib/perl5/perlmacros.swg",
        "Lib/perl5/perlmain.i",
        "Lib/perl5/perlopers.swg",
        "Lib/perl5/perlprimtypes.swg",
        "Lib/perl5/perlrun.swg",
        "Lib/perl5/perlruntime.swg",
        "Lib/perl5/perlstrings.swg",
        "Lib/perl5/perltypemaps.swg",
        "Lib/perl5/perluserdir.swg",
        "Lib/perl5/reference.i",
        "Lib/perl5/std_common.i",
        "Lib/perl5/std_deque.i",
        "Lib/perl5/std_except.i",
        "Lib/perl5/std_list.i",
        "Lib/perl5/std_map.i",
        "Lib/perl5/std_pair.i",
        "Lib/perl5/std_string.i",
        "Lib/perl5/std_vector.i",
        "Lib/perl5/stl.i",
        "Lib/perl5/typemaps.i",
        "Lib/php/const.i",
        "Lib/php/director.swg",
        "Lib/php/factory.i",
        "Lib/php/globalvar.i",
        "Lib/php/php.swg",
        "Lib/php/phpinit.swg",
        "Lib/php/phpkw.swg",
        "Lib/php/phppointers.i",
        "Lib/php/phprun.swg",
        "Lib/php/std_common.i",
        "Lib/php/std_deque.i",
        "Lib/php/std_map.i",
        "Lib/php/std_pair.i",
        "Lib/php/std_string.i",
        "Lib/php/std_vector.i",
        "Lib/php/stl.i",
        "Lib/php/typemaps.i",
        "Lib/php/utils.i",
        "Lib/pike/pike.swg",
        "Lib/pike/pikekw.swg",
        "Lib/pike/pikerun.swg",
        "Lib/pike/std_string.i",
        "Lib/pointer.i",
        "Lib/python/argcargv.i",
        "Lib/python/attribute.i",
        "Lib/python/boost_shared_ptr.i",
        "Lib/python/builtin.swg",
        "Lib/python/carrays.i",
        "Lib/python/ccomplex.i",
        "Lib/python/cdata.i",
        "Lib/python/cmalloc.i",
        "Lib/python/complex.i",
        "Lib/python/cpointer.i",
        "Lib/python/cstring.i",
        "Lib/python/cwstring.i",
        "Lib/python/defarg.swg",
        "Lib/python/director.swg",
        "Lib/python/embed.i",
        "Lib/python/exception.i",
        "Lib/python/factory.i",
        "Lib/python/file.i",
        "Lib/python/implicit.i",
        "Lib/python/pyabc.i",
        "Lib/python/pyapi.swg",
        "Lib/python/pybackward.swg",
        "Lib/python/pybuffer.i",
        "Lib/python/pyclasses.swg",
        "Lib/python/pycomplex.swg",
        "Lib/python/pycontainer.swg",
        "Lib/python/pydocs.swg",
        "Lib/python/pyerrors.swg",
        "Lib/python/pyfragments.swg",
        "Lib/python/pyhead.swg",
        "Lib/python/pyinit.swg",
        "Lib/python/pyiterators.swg",
        "Lib/python/pymacros.swg",
        "Lib/python/pyname_compat.i",
        "Lib/python/pyopers.swg",
        "Lib/python/pyprimtypes.swg",
        "Lib/python/pyrun.swg",
        "Lib/python/pyruntime.swg",
        "Lib/python/pystdcommon.swg",
        "Lib/python/pystrings.swg",
        "Lib/python/python.swg",
        "Lib/python/pythonkw.swg",
        "Lib/python/pythreads.swg",
        "Lib/python/pytuplehlp.swg",
        "Lib/python/pytypemaps.swg",
        "Lib/python/pyuserdir.swg",
        "Lib/python/pywstrings.swg",
        "Lib/python/std_alloc.i",
        "Lib/python/std_array.i",
        "Lib/python/std_auto_ptr.i",
        "Lib/python/std_basic_string.i",
        "Lib/python/std_carray.i",
        "Lib/python/std_char_traits.i",
        "Lib/python/std_common.i",
        "Lib/python/std_complex.i",
        "Lib/python/std_container.i",
        "Lib/python/std_deque.i",
        "Lib/python/std_except.i",
        "Lib/python/std_ios.i",
        "Lib/python/std_iostream.i",
        "Lib/python/std_list.i",
        "Lib/python/std_map.i",
        "Lib/python/std_multimap.i",
        "Lib/python/std_multiset.i",
        "Lib/python/std_pair.i",
        "Lib/python/std_set.i",
        "Lib/python/std_shared_ptr.i",
        "Lib/python/std_sstream.i",
        "Lib/python/std_streambuf.i",
        "Lib/python/std_string.i",
        "Lib/python/std_unordered_map.i",
        "Lib/python/std_unordered_multimap.i",
        "Lib/python/std_unordered_multiset.i",
        "Lib/python/std_unordered_set.i",
        "Lib/python/std_vector.i",
        "Lib/python/std_vectora.i",
        "Lib/python/std_wios.i",
        "Lib/python/std_wiostream.i",
        "Lib/python/std_wsstream.i",
        "Lib/python/std_wstreambuf.i",
        "Lib/python/std_wstring.i",
        "Lib/python/stl.i",
        "Lib/python/typemaps.i",
        "Lib/python/wchar.i",
        "Lib/r/boost_shared_ptr.i",
        "Lib/r/cdata.i",
        "Lib/r/exception.i",
        "Lib/r/r.swg",
        "Lib/r/rcontainer.swg",
        "Lib/r/rfragments.swg",
        "Lib/r/rkw.swg",
        "Lib/r/ropers.swg",
        "Lib/r/rrun.swg",
        "Lib/r/rstdcommon.swg",
        "Lib/r/rtype.swg",
        "Lib/r/srun.swg",
        "Lib/r/std_alloc.i",
        "Lib/r/std_common.i",
        "Lib/r/std_container.i",
        "Lib/r/std_deque.i",
        "Lib/r/std_except.i",
        "Lib/r/std_list.i",
        "Lib/r/std_map.i",
        "Lib/r/std_pair.i",
        "Lib/r/std_shared_ptr.i",
        "Lib/r/std_string.i",
        "Lib/r/std_vector.i",
        "Lib/r/stl.i",
        "Lib/r/typemaps.i",
        "Lib/ruby/argcargv.i",
        "Lib/ruby/attribute.i",
        "Lib/ruby/boost_shared_ptr.i",
        "Lib/ruby/carrays.i",
        "Lib/ruby/cdata.i",
        "Lib/ruby/cmalloc.i",
        "Lib/ruby/cpointer.i",
        "Lib/ruby/cstring.i",
        "Lib/ruby/director.swg",
        "Lib/ruby/embed.i",
        "Lib/ruby/exception.i",
        "Lib/ruby/factory.i",
        "Lib/ruby/file.i",
        "Lib/ruby/progargcargv.i",
        "Lib/ruby/ruby.swg",
        "Lib/ruby/rubyapi.swg",
        "Lib/ruby/rubyautodoc.swg",
        "Lib/ruby/rubyclasses.swg",
        "Lib/ruby/rubycomplex.swg",
        "Lib/ruby/rubycontainer.swg",
        "Lib/ruby/rubycontainer_extended.swg",
        "Lib/ruby/rubydef.swg",
        "Lib/ruby/rubyerrors.swg",
        "Lib/ruby/rubyfragments.swg",
        "Lib/ruby/rubyhead.swg",
        "Lib/ruby/rubyinit.swg",
        "Lib/ruby/rubyiterators.swg",
        "Lib/ruby/rubykw.swg",
        "Lib/ruby/rubymacros.swg",
        "Lib/ruby/rubyopers.swg",
        "Lib/ruby/rubyprimtypes.swg",
        "Lib/ruby/rubyrun.swg",
        "Lib/ruby/rubyruntime.swg",
        "Lib/ruby/rubystdautodoc.swg",
        "Lib/ruby/rubystdcommon.swg",
        "Lib/ruby/rubystdcommon_forward.swg",
        "Lib/ruby/rubystdfunctors.swg",
        "Lib/ruby/rubystrings.swg",
        "Lib/ruby/rubytracking.swg",
        "Lib/ruby/rubytypemaps.swg",
        "Lib/ruby/rubyuserdir.swg",
        "Lib/ruby/rubywstrings.swg",
        "Lib/ruby/std_alloc.i",
        "Lib/ruby/std_array.i",
        "Lib/ruby/std_basic_string.i",
        "Lib/ruby/std_char_traits.i",
        "Lib/ruby/std_common.i",
        "Lib/ruby/std_complex.i",
        "Lib/ruby/std_container.i",
        "Lib/ruby/std_deque.i",
        "Lib/ruby/std_except.i",
        "Lib/ruby/std_functors.i",
        "Lib/ruby/std_ios.i",
        "Lib/ruby/std_iostream.i",
        "Lib/ruby/std_list.i",
        "Lib/ruby/std_map.i",
        "Lib/ruby/std_multimap.i",
        "Lib/ruby/std_multiset.i",
        "Lib/ruby/std_pair.i",
        "Lib/ruby/std_queue.i",
        "Lib/ruby/std_set.i",
        "Lib/ruby/std_shared_ptr.i",
        "Lib/ruby/std_sstream.i",
        "Lib/ruby/std_stack.i",
        "Lib/ruby/std_streambuf.i",
        "Lib/ruby/std_string.i",
        "Lib/ruby/std_unordered_map.i",
        "Lib/ruby/std_unordered_multimap.i",
        "Lib/ruby/std_unordered_multiset.i",
        "Lib/ruby/std_unordered_set.i",
        "Lib/ruby/std_vector.i",
        "Lib/ruby/std_vectora.i",
        "Lib/ruby/std_wstring.i",
        "Lib/ruby/stl.i",
        "Lib/ruby/timeval.i",
        "Lib/ruby/typemaps.i",
        "Lib/runtime.swg",
        "Lib/scilab/boost_shared_ptr.i",
        "Lib/scilab/carrays.i",
        "Lib/scilab/cmalloc.i",
        "Lib/scilab/cpointer.i",
        "Lib/scilab/exception.i",
        "Lib/scilab/matrix.i",
        "Lib/scilab/sciarray.swg",
        "Lib/scilab/scibool.swg",
        "Lib/scilab/scichar.swg",
        "Lib/scilab/scicontainer.swg",
        "Lib/scilab/scidouble.swg",
        "Lib/scilab/scienum.swg",
        "Lib/scilab/sciexception.swg",
        "Lib/scilab/scifloat.swg",
        "Lib/scilab/sciint.swg",
        "Lib/scilab/sciiterators.swg",
        "Lib/scilab/scilab.swg",
        "Lib/scilab/scilist.swg",
        "Lib/scilab/scilong.swg",
        "Lib/scilab/scilonglong.swg",
        "Lib/scilab/scimacros.swg",
        "Lib/scilab/scimatrixbool.swg",
        "Lib/scilab/scimatrixchar.swg",
        "Lib/scilab/scimatrixdouble.swg",
        "Lib/scilab/scimatrixint.swg",
        "Lib/scilab/scimisctypes.swg",
        "Lib/scilab/scipointer.swg",
        "Lib/scilab/sciprimtypes.swg",
        "Lib/scilab/scirun.swg",
        "Lib/scilab/sciruntime.swg",
        "Lib/scilab/scisequence.swg",
        "Lib/scilab/scisequencebool.swg",
        "Lib/scilab/scisequencedouble.swg",
        "Lib/scilab/scisequencefloat.swg",
        "Lib/scilab/scisequenceint.swg",
        "Lib/scilab/scisequencepointer.swg",
        "Lib/scilab/scisequencestring.swg",
        "Lib/scilab/scishort.swg",
        "Lib/scilab/scisignedchar.swg",
        "Lib/scilab/scistdcommon.swg",
        "Lib/scilab/scitypemaps.swg",
        "Lib/scilab/sciunsignedchar.swg",
        "Lib/scilab/sciunsignedint.swg",
        "Lib/scilab/sciunsignedlong.swg",
        "Lib/scilab/sciunsignedshort.swg",
        "Lib/scilab/std_alloc.i",
        "Lib/scilab/std_basic_string.i",
        "Lib/scilab/std_char_traits.i",
        "Lib/scilab/std_common.i",
        "Lib/scilab/std_container.i",
        "Lib/scilab/std_deque.i",
        "Lib/scilab/std_except.i",
        "Lib/scilab/std_list.i",
        "Lib/scilab/std_map.i",
        "Lib/scilab/std_multiset.i",
        "Lib/scilab/std_pair.i",
        "Lib/scilab/std_set.i",
        "Lib/scilab/std_shared_ptr.i",
        "Lib/scilab/std_string.i",
        "Lib/scilab/std_vector.i",
        "Lib/scilab/stl.i",
        "Lib/scilab/typemaps.i",
        "Lib/shared_ptr.i",
        "Lib/std/_std_deque.i",
        "Lib/std/std_alloc.i",
        "Lib/std/std_array.i",
        "Lib/std/std_basic_string.i",
        "Lib/std/std_carray.swg",
        "Lib/std/std_char_traits.i",
        "Lib/std/std_common.i",
        "Lib/std/std_container.i",
        "Lib/std/std_deque.i",
        "Lib/std/std_except.i",
        "Lib/std/std_ios.i",
        "Lib/std/std_iostream.i",
        "Lib/std/std_list.i",
        "Lib/std/std_map.i",
        "Lib/std/std_multimap.i",
        "Lib/std/std_multiset.i",
        "Lib/std/std_pair.i",
        "Lib/std/std_queue.i",
        "Lib/std/std_set.i",
        "Lib/std/std_sstream.i",
        "Lib/std/std_stack.i",
        "Lib/std/std_streambuf.i",
        "Lib/std/std_string.i",
        "Lib/std/std_unordered_map.i",
        "Lib/std/std_unordered_multimap.i",
        "Lib/std/std_unordered_multiset.i",
        "Lib/std/std_unordered_set.i",
        "Lib/std/std_vector.i",
        "Lib/std/std_vectora.i",
        "Lib/std/std_wios.i",
        "Lib/std/std_wiostream.i",
        "Lib/std/std_wsstream.i",
        "Lib/std/std_wstreambuf.i",
        "Lib/std/std_wstring.i",
        "Lib/std_except.i",
        "Lib/stdint.i",
        "Lib/stl.i",
        "Lib/swig.swg",
        "Lib/swigarch.i",
        "Lib/swigerrors.swg",
        "Lib/swigfragments.swg",
        "Lib/swiginit.swg",
        "Lib/swiglabels.swg",
        "Lib/swigrun.i",
        "Lib/swigrun.swg",
        "Lib/swigwarn.swg",
        "Lib/swigwarnings.swg",
        "Lib/tcl/attribute.i",
        "Lib/tcl/carrays.i",
        "Lib/tcl/cdata.i",
        "Lib/tcl/cmalloc.i",
        "Lib/tcl/cpointer.i",
        "Lib/tcl/cstring.i",
        "Lib/tcl/cwstring.i",
        "Lib/tcl/exception.i",
        "Lib/tcl/factory.i",
        "Lib/tcl/std_common.i",
        "Lib/tcl/std_deque.i",
        "Lib/tcl/std_except.i",
        "Lib/tcl/std_map.i",
        "Lib/tcl/std_pair.i",
        "Lib/tcl/std_string.i",
        "Lib/tcl/std_vector.i",
        "Lib/tcl/std_wstring.i",
        "Lib/tcl/stl.i",
        "Lib/tcl/tcl8.swg",
        "Lib/tcl/tclapi.swg",
        "Lib/tcl/tclerrors.swg",
        "Lib/tcl/tclfragments.swg",
        "Lib/tcl/tclinit.swg",
        "Lib/tcl/tclinterp.i",
        "Lib/tcl/tclkw.swg",
        "Lib/tcl/tclmacros.swg",
        "Lib/tcl/tclopers.swg",
        "Lib/tcl/tclprimtypes.swg",
        "Lib/tcl/tclresult.i",
        "Lib/tcl/tclrun.swg",
        "Lib/tcl/tclruntime.swg",
        "Lib/tcl/tclsh.i",
        "Lib/tcl/tclstrings.swg",
        "Lib/tcl/tcltypemaps.swg",
        "Lib/tcl/tcluserdir.swg",
        "Lib/tcl/tclwstrings.swg",
        "Lib/tcl/typemaps.i",
        "Lib/tcl/wish.i",
        "Lib/typemaps/attribute.swg",
        "Lib/typemaps/carrays.swg",
        "Lib/typemaps/cdata.swg",
        "Lib/typemaps/cmalloc.swg",
        "Lib/typemaps/cpointer.swg",
        "Lib/typemaps/cstring.swg",
        "Lib/typemaps/cstrings.swg",
        "Lib/typemaps/cwstring.swg",
        "Lib/typemaps/enumint.swg",
        "Lib/typemaps/exception.swg",
        "Lib/typemaps/factory.swg",
        "Lib/typemaps/fragments.swg",
        "Lib/typemaps/implicit.swg",
        "Lib/typemaps/inoutlist.swg",
        "Lib/typemaps/misctypes.swg",
        "Lib/typemaps/primtypes.swg",
        "Lib/typemaps/ptrtypes.swg",
        "Lib/typemaps/std_except.swg",
        "Lib/typemaps/std_string.swg",
        "Lib/typemaps/std_strings.swg",
        "Lib/typemaps/std_wstring.swg",
        "Lib/typemaps/string.swg",
        "Lib/typemaps/strings.swg",
        "Lib/typemaps/swigmacros.swg",
        "Lib/typemaps/swigobject.swg",
        "Lib/typemaps/swigtype.swg",
        "Lib/typemaps/swigtypemaps.swg",
        "Lib/typemaps/typemaps.swg",
        "Lib/typemaps/valtypes.swg",
        "Lib/typemaps/void.swg",
        "Lib/typemaps/wstring.swg",
        "Lib/uffi/uffi.swg",
        "Lib/wchar.i",
        "Lib/windows.i",
        "Lib/xml/typemaps.i",
        "Lib/xml/xml.swg",
    ],
    licenses = ["notice"],  # simple notice license for Lib/
)

# find . -name '*.h' -print | awk '!/Examples/' | awk '{gsub(/^.\//, "", $0); printf("\"%s\"\n", $0) }'
swig_headers = [
    "Source/CParse/cparse.h",
    "Source/CParse/parser.h",
    "Source/DOH/doh.h",
    "Source/DOH/dohint.h",
    "Source/Doxygen/doxycommands.h",
    "Source/Doxygen/doxyentity.h",
    "Source/Doxygen/doxyparser.h",
    "Source/Doxygen/doxytranslator.h",
    "Source/Doxygen/javadoc.h",
    "Source/Doxygen/pydoc.h",
    "Source/Include/swigconfig.h",
    "Source/Include/swigwarn.h",
    "Source/Modules/swigmod.h",
    "Source/Preprocessor/preprocessor.h",
    "Source/Swig/swig.h",
    "Source/Swig/swigfile.h",
    "Source/Swig/swigopt.h",
    "Source/Swig/swigparm.h",
    "Source/Swig/swigscan.h",
    "Source/Swig/swigtree.h",
    "Source/Swig/swigwrap.h",
]

#     find swig/v4_0_0/Source -name '*.c??' -print | awk '!/Examples/' | awk '{gsub(/third_party\/swig\/v4_0_0\//, "", $0); printf("\"%s\",\n", $0) }'
swig_sources = [
    "Source/Preprocessor/cpp.c",
    "Source/Preprocessor/expr.c",
    "Source/DOH/void.c",
    "Source/DOH/hash.c",
    "Source/DOH/base.c",
    "Source/DOH/file.c",
    "Source/DOH/list.c",
    "Source/DOH/memory.c",
    "Source/DOH/string.c",
    "Source/DOH/fio.c",
    "Source/Swig/deprecate.c",
    "Source/Swig/getopt.c",
    "Source/Swig/stype.c",
    "Source/Swig/typesys.c",
    "Source/Swig/scanner.c",
    "Source/Swig/typemap.c",
    "Source/Swig/misc.c",
    "Source/Swig/cwrap.c",
    "Source/Swig/error.c",
    "Source/Swig/include.c",
    "Source/Swig/naming.c",
    "Source/Swig/fragment.c",
    "Source/Swig/symbol.c",
    "Source/Swig/tree.c",
    "Source/Swig/typeobj.c",
    "Source/Swig/wrapfunc.c",
    "Source/Swig/extend.c",
    "Source/Swig/parms.c",
    "Source/CParse/cscanner.c",
    "Source/CParse/parser.c",
    "Source/CParse/util.c",
    "Source/CParse/templ.c",
    "Source/Doxygen/javadoc.cxx",
    "Source/Doxygen/doxyparser.cxx",
    "Source/Doxygen/pydoc.cxx",
    "Source/Doxygen/doxytranslator.cxx",
    "Source/Doxygen/doxyentity.cxx",
    "Source/Modules/python.cxx",
    "Source/Modules/xml.cxx",
    "Source/Modules/octave.cxx",
    "Source/Modules/clisp.cxx",
    "Source/Modules/emit.cxx",
    "Source/Modules/perl5.cxx",
    "Source/Modules/pike.cxx",
    "Source/Modules/ruby.cxx",
    "Source/Modules/interface.cxx",
    "Source/Modules/lua.cxx",
    "Source/Modules/overload.cxx",
    "Source/Modules/s-exp.cxx",
    "Source/Modules/cffi.cxx",
    "Source/Modules/java.cxx",
    "Source/Modules/r.cxx",
    "Source/Modules/typepass.cxx",
    "Source/Modules/allegrocl.cxx",
    "Source/Modules/allocate.cxx",
    "Source/Modules/go.cxx",
    "Source/Modules/swigmain.cxx",
    "Source/Modules/utils.cxx",
    "Source/Modules/mzscheme.cxx",
    "Source/Modules/ocaml.cxx",
    "Source/Modules/scilab.cxx",
    "Source/Modules/tcl8.cxx",
    "Source/Modules/javascript.cxx",
    "Source/Modules/chicken.cxx",
    "Source/Modules/uffi.cxx",
    "Source/Modules/csharp.cxx",
    "Source/Modules/d.cxx",
    "Source/Modules/directors.cxx",
    "Source/Modules/lang.cxx",
    "Source/Modules/modula3.cxx",
    "Source/Modules/nested.cxx",
    "Source/Modules/contract.cxx",
    "Source/Modules/guile.cxx",
    "Source/Modules/php.cxx",
    "Source/Modules/browser.cxx",
    "Source/Modules/main.cxx",
]

copts = [
    "$(STACK_FRAME_UNLIMITED)",
    "-fexceptions",
    "-Wno-unused-variable",
]

includes = [
    "Source/CParse",
    "Source/DOH",
    "Source/Include",
    "Source/Modules",
    "Source/Doxygen",
    "Source/Preprocessor",
    "Source/Swig",
]

genrule(
    name = "config",
    srcs = ["@rules_hdl//dependency_support/org_swig:swigconfig.h"],
    outs = ["Source/Include/swigconfig.h"],
    cmd = "cat $(location @rules_hdl//dependency_support/org_swig:swigconfig.h) > $@",
)

cc_binary(
    name = "swig",
    srcs = swig_headers + swig_sources,
    copts = copts,
    data = [
        ":swig_templates",
    ],
    features = [
        "-parse_headers",
        "-use_header_modules",  # Incompatible with -fexceptions.
    ],
    includes = includes,
    output_licenses = ["unencumbered"],
    deps = [
        "@org_pcre_ftp//:pcre",
    ],
)
